fix: Fixed navbar issue for when on mobile fix: Aligned elements vertically feat: Made main link font size larger

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 .navbar-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   width: 100%;
   padding: 32px;
@@ -20,6 +21,10 @@
   font-size: 1.5rem;
 }
 
+.navbar-title {
+  font-size: 2.4rem;
+}
+
 .navbar-title:hover,
 .navbar-links > li > a:hover {
   text-decoration: underline;
@@ -30,3 +35,12 @@
   gap: 32px;
 } 
 
+@media (max-width: 840px) {
+  .navbar-container {
+    flex-direction: column;
+  }
+
+  .navbar-links {
+    flex-direction: column;
+  }
+}
